<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name = "ride"
            type="com.jesse.edvaro.data.model.Ride"
            />
    </data>
    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ride_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/ride_card_black"
        app:cardCornerRadius="10dp"
        android:layout_marginVertical="7dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ride_card_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:paddingHorizontal="27dp"
            >

            <ImageView
                android:id="@+id/ride_map_iv"
                android:layout_width="266dp"
                android:layout_height="148dp"
                android:contentDescription="@string/ride_map_display_photo"
                tools:src="@drawable/ride_map"
                android:scaleType="centerCrop"
                imageSrcUrl="@{ride.mapUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/city_name_btn"
                formatText="@{ride.city}"
                tools:text="@string/city_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ride_map_iv"
                style="@style/CityStateButtonStyle" />

            <Button
                android:id="@+id/state_name_btn"
                style="@style/CityStateButtonStyle"
                tools:text="@string/state_name"
                formatText="@{ride.state}"
                android:paddingHorizontal="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ride_map_iv" />

            <TextView
                android:id="@+id/ride_id_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_name_btn"
                tools:text="Ride Id : 002"
                style="@style/RideDetailsTextStyle"
                />

            <TextView
                android:id="@+id/origin_station_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ride_id_tv"
                tools:text="Origin Station : 20"
                style="@style/RideDetailsTextStyle" />

            <TextView
                android:id="@+id/station_path_tv"
                style="@style/RideDetailsTextStyle"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/origin_station_tv"
                tools:text="station_path : [20, 39, 40, 42, 54, 63, 72, 88, 98]" />

            <TextView
                android:id="@+id/date_tv"
                style="@style/RideDetailsTextStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/station_path_tv"
                tools:text="Date : 15th Feb 2022 16:33" />

            <TextView
                android:id="@+id/distance_tv"
                style="@style/RideDetailsTextStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_tv"
                tools:text="Distance : 0"
                android:layout_marginBottom="22dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
